archive/lingarr/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lingarr
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: external.vaderrp.com
    gatus.home-operations.com/endpoint: |
      group: Media
      url: "https://lingarr.vaderrp.com/ping"
      dns: ""
      client:
        dns-resolver: "tcp://192.168.7.8:53"
        timeout: 15s
      conditions:
        - "[STATUS] == 200"
spec:
  parentRefs:
    - name: gateway-internal
      namespace: network
      sectionName: https
  hostnames:
    - lingarr.vaderrp.com
  rules:
    - backendRefs:
        - name: lingarr
          port: 8080
